add photos and faq

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						<ul>
 							<li><a href="#intro">Utazzon velünk!</a></li>
 							<li><a href="#one">Szolgáltatásaink</a></li>
-							<li><a href="#two">Ár kalkulátor
+							<li><a href="#two">Gyakran ismételt kérdések
 							</a></li>
 							<li><a href="#three">Kapcsolat</a></li>
 						</ul>
@@ -38,7 +38,7 @@
 							<h1>Goldkert Transfer</h1>
 							<p>Belföldi és nemzetközi személyszállítás</p>
 							<ul class="actions">
-								<li><a href="#three" class="button scrolly">Kérjen ajánlatot!</a></li>
+								<li><a href="#three" class="button scrolly">Kérjen árajánlatot!</a></li>
 							</ul>
 						</div>
 					</section>
@@ -46,7 +46,7 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/sprinter4.png" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Nemzetközi személyszállítás</h2>
@@ -58,7 +58,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/sprinter5.png" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Belföldi személyszállítás</h2>
@@ -70,7 +70,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+							<a href="#" class="image"><img src="images/moving.png" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Költöztetés</h2>
@@ -86,43 +86,50 @@
 				<!-- Two -->
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
-							<h2>What we do</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<h2>Gyakran ismételt kérdések</h2>
+							<p>Amennyiben egyéb <a href="#three" class="scrolly" >kérdése van</a> keressen minket bizalommal</p>
 							<div class="features">
 								<section>
-									<span class="icon solid major fa-code"></span>
-									<h3>Lorem ipsum amet</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<span class="icon solid major fa-question"></span>
+									<h3>Az árakkal kapcsolatban hol találok több információt?</h3>
+									<p>Az árakról telefonon vagy e-mail-en keresztül kaphat információt.</p>
 								</section>
 								<section>
-									<span class="icon solid major fa-lock"></span>
-									<h3>Aliquam sed nullam</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<span class="icon solid major fa-question"></span>
+									<h3>Mikor kell fizetni az útiköltséget és hogyan?</h3>
+									<p>A sofőrnél, készpénzzel, indulás előtt.</p>
 								</section>
 								<section>
-									<span class="icon solid major fa-cog"></span>
-									<h3>Sed erat ullam corper</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<span class="icon solid major fa-question"></span>
+									<h3>Milyen pénznemben tudok fizetni?</h3>
+									<p>Előzetes egyeztetés alapján többféle pénznemet elfogadunk.</p>
 								</section>
 								<section>
-									<span class="icon solid major fa-desktop"></span>
-									<h3>Veroeros quis lorem</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<span class="icon solid major fa-question"></span>
+									<h3>Milyen csomagot vihetek magammal amennyiben külföldre utaznék?</h3>
+									<p>Egy utazótáska valamint egy hátizsák extra költségek nélkül szállítható.</p>
 								</section>
 								<section>
-									<span class="icon solid major fa-link"></span>
-									<h3>Urna quis bibendum</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<span class="icon solid major fa-question"></span>
+									<h3>Kártyás fizetésre, banki átutalásra van lehetőség?</h3>
+									<p>Sajnos jelenleg csak készpénz elfogadására van lehetőségünk.</p>
 								</section>
 								<section>
-									<span class="icon major fa-gem"></span>
-									<h3>Aliquam urna dapibus</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<span class="icon solid major fa-question"></span>
+									<h3>Étel, ital fogyasztására van lehetőség utazás közben?</h3>
+									<p>Étel, valamint alkoholmentes ital fogyasztása megengedett.</p>
+								</section>
+								<section>
+									<span class="icon solid major fa-question"></span>
+									<h3>Legkésőbb mikor jelentkezhetek az adott utazásra?</h3>
+									<p>A jelentkezési határidő az indulást megelőző nap vége.</p>
+								</section>
+								<section>
+									<span class="icon solid major fa-question"></span>
+									<h3>Hogy tudom lemondani a transzfer szolgáltatást?</h3>
+									<p>A szolgáltatást indulás előtt 48 órával telefonon vagy e-mail-ben áll módjában lemondani.</p>
 								</section>
 							</div>
-							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn more</a></li>
-							</ul>
 						</div>
 					</section>
 
@@ -130,7 +137,7 @@
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Vegye fel velünk a kapcsolatot!</h2>
-							<p>Kollégáink várják hívását</p>
+							<p>Kollégáink várják megkeresését</p>
 							<div class="split style1">
 								<section>
 									<form method="post" action="#">
