--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
 <!DOCTYPE HTML>
-<!--
-	Hyperspace by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
-		<title>Hyperspace by HTML5 UP</title>
+		<title>Goldkert transfer</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -170,7 +165,7 @@
 										</li>
 										<li>
 											<h3>Email</h3>
-											<a href="#">farkascsaba1980@gmail.com</a>
+											<a href="#">info@goldkerttransfer.com</a>
 										</li>
 										<li>
 											<h3>Telefon</h3>
