--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Goldkert Transfer</h1>
-							<p>Belföldi és nemzetközi személyszállítás</p>
+							<p>Utazzon velünk bizonságosan és kényelmesen!</p>
 							<ul class="actions">
 								<li><a href="#three" class="button scrolly">Kérjen árajánlatot!</a></li>
 							</ul>
@@ -165,7 +165,7 @@
 										</li>
 										<li>
 											<h3>Email</h3>
-											<a href="#">info@goldkerttransfer.com</a>
+											<a href="#">transfer@goldkert.com</a>
 										</li>
 										<li>
 											<h3>Telefon</h3>
