--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 										</li>
 										<li>
 											<h3>Telefon</h3>
-											<span>+36 70 546 2324</span>
+											<span><a href="tel:0036303346693">+36303346693</a></span>
 										</li>
 										<li>
 											<h3>Közösségi média</h3>
