--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Nemzetközi személyszállítás</h2>
-									<p>Budapesti induással Németország, Ausztria, illetve Hollandia területére.</p>
+									<p>Háztól házig Németország, Ausztria, illetve Hollandia területére.</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Érdekel</a></li>
 									</ul>
@@ -57,7 +57,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Belföldi személyszállítás</h2>
-									<p>Háztól házig szolgáltatás</p>
+									<p>Háztól házig szolgáltatás biztonságosan és kényelmesen</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Érdekel</a></li>
 									</ul>
@@ -169,7 +169,7 @@
 										</li>
 										<li>
 											<h3>Telefon</h3>
-											<span><a href="tel:0036303346693">+36303346693</a></span>
+											<span><a href="tel:0036705462324">+36 70 546 2324</a></span>
 										</li>
 										<li>
 											<h3>Közösségi média</h3>
