--- a/index.html
+++ b/index.html
@@ -135,19 +135,19 @@
 							<p>Kollégáink várják megkeresését</p>
 							<div class="split style1">
 								<section>
-									<form method="post" action="#">
+									<form name="contact" method="POST" data-netlify="true">
 										<div class="fields">
 											<div class="field half">
 												<label for="name">Név</label>
-												<input type="text" name="name" id="name" />
+												<input required type="text" name="name" id="name" />
 											</div>
 											<div class="field half">
 												<label for="email">Email</label>
-												<input type="text" name="email" id="email" />
+												<input required type="email" name="email" id="email" />
 											</div>
 											<div class="field">
 												<label for="message">Üzenet</label>
-												<textarea name="message" id="message" rows="5"></textarea>
+												<textarea required name="message" id="message" rows="5"></textarea>
 											</div>
 										</div>
 										<ul class="actions">
