create details pages

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 									<h2>Nemzetközi személyszállítás</h2>
 									<p>Háztól házig Németország, Ausztria, illetve Hollandia területére.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Érdekel</a></li>
+										<li><a href="internationaltransfer.html" class="button">Érdekel</a></li>
 									</ul>
 								</div>
 							</div>
@@ -59,7 +59,7 @@
 									<h2>Belföldi személyszállítás</h2>
 									<p>Háztól házig szolgáltatás biztonságosan és kényelmesen</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Érdekel</a></li>
+										<li><a href="transfer.html" class="button">Érdekel</a></li>
 									</ul>
 								</div>
 							</div>
@@ -71,7 +71,7 @@
 									<h2>Költöztetés</h2>
 									<p>Magyarországon, illetve külföldre egyaránt</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Érdekel</a></li>
+										<li><a href="moving.html" class="button">Érdekel</a></li>
 									</ul>
 								</div>
 							</div>
