--- a/index.html
+++ b/index.html
@@ -151,8 +151,12 @@
 											</div>
 										</div>
 										<ul class="actions">
-											<li><a href="" class="button submit">Üzenet küldése</a></li>
+											<li><a href="" class="button submit">üzenet küldése</a></li>
 										</ul>
+										<div class="col-6 col-12-small">
+											<input type="checkbox" id="demo-human" name="demo-human" checked>
+											<label for="demo-human">Elovastam és elfogadom az <a href="./adatkezelesi.html">adatkezelési tájékoztatóban</a>  foglaltakat</label>
+										</div>
 									</form>
 								</section>
 								<section>
@@ -165,7 +169,7 @@
 										</li>
 										<li>
 											<h3>Email</h3>
-											<a href="#">transfer@goldkert.com</a>
+											<a href="#">farkascsaba1980@gmail.com</a>
 										</li>
 										<li>
 											<h3>Telefon</h3>
