create sucess html

--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
 											</div>
 										</div>
 										<ul class="actions">
-											<li><a href="" class="button submit">üzenet küldése</a></li>
+											<li><a href="./success.html" id="sendMessageBtn" class="button submit disabled">üzenet küldése</a></li>
 										</ul>
 										<div class="col-6 col-12-small">
-											<input type="checkbox" id="demo-human" name="demo-human" checked>
-											<label for="demo-human">Elovastam és elfogadom az <a href="./adatkezelesi.html">adatkezelési tájékoztatóban</a>  foglaltakat</label>
+											<input type="checkbox" id="privacyPolicy" name="adatkezelesi">
+											<label for="privacyPolicy">Elovastam és elfogadom az <a href="./adatkezelesi.html">adatkezelési tájékoztatóban</a>  foglaltakat</label>
 										</div>
 									</form>
 								</section>
