--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 											</div>
 										</div>
 										<ul class="actions">
-											<li><a href="./success.html" id="sendMessageBtn" class="button submit disabled">üzenet küldése</a></li>
+											<li><a href="./success.html" id="sendMessageBtn" class="button submit ">üzenet küldése</a></li>
 										</ul>
 										<div class="col-6 col-12-small">
 											<input type="checkbox" id="privacyPolicy" name="adatkezelesi">
