remove id from label

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 										</ul>
 										<div class="col-6 col-12-small">
 											<input type="checkbox" id="privacyPolicy" name="adatkezelesi">
-											<label for="privacyPolicy" name="adatkezelesi">Elovastam és elfogadom az <a href="./adatkezelesi.html">adatkezelési tájékoztatóban</a>  foglaltakat</label>
+											<label for="privacyPolicy">Elovastam és elfogadom az <a href="./adatkezelesi.html">adatkezelési tájékoztatóban</a>  foglaltakat</label>
 										</div>
 									</form>
 								</section>
