--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 							<p>Kollégáink várják megkeresését</p>
 							<div class="split style1">
 								<section>
-									<form name="contact" method="POST" data-netlify="true">
+									<form name="contact" method="POST" action="/success.html" data-netlify="true">
 										<div class="fields">
 											<div class="field half">
 												<label for="name">Név</label>
@@ -151,7 +151,7 @@
 											</div>
 										</div>
 										<ul class="actions">
-											<li><a href="./success.html" id="sendMessageBtn" class="button submit ">üzenet küldése</a></li>
+											<li><a href="" id="sendMessageBtn" class="button submit">üzenet küldése</a></li>
 										</ul>
 										<div class="col-6 col-12-small">
 											<input type="checkbox" id="privacyPolicy" name="adatkezelesi">
