modify sucess message

--- a/success.html
+++ b/success.html
@@ -28,7 +28,8 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<p>Az üzent sikeresen elküldve</p>
+							<h6>Az üzent sikeresen elküldve</h6>
+							<p> <a href="./index.html">Vissza a főoldalra</a></p>
 						</div>
 					</section>
 
