remove js from form

--- a/index.html
+++ b/index.html
@@ -153,10 +153,10 @@
 										<ul class="actions">
 											<li><a href="" id="sendMessageBtn" class="button submit">üzenet küldése</a></li>
 										</ul>
-										<div class="col-6 col-12-small">
+									<!-- 	<div class="col-6 col-12-small">
 											<input type="checkbox" id="privacyPolicy" name="adatkezelesi">
 											<label for="privacyPolicy">Elovastam és elfogadom az <a href="./adatkezelesi.html">adatkezelési tájékoztatóban</a>  foglaltakat</label>
-										</div>
+										</div> -->
 									</form>
 								</section>
 								<section>
