--- a/index.html
+++ b/index.html
@@ -158,6 +158,26 @@
 											<label for="privacyPolicy">Elovastam és elfogadom az <a href="./adatkezelesi.html">adatkezelési tájékoztatóban</a>  foglaltakat</label>
 										</div> -->
 									</form>
+									<form name="other" method="POST" data-netlify="true">
+										<p>
+										  <label>Your Name: <input type="text" name="name" /></label>
+										</p>
+										<p>
+										  <label>Your Email: <input type="email" name="email" /></label>
+										</p>
+										<p>
+										  <label>Your Role: <select name="role[]" multiple>
+											<option value="leader">Leader</option>
+											<option value="follower">Follower</option>
+										  </select></label>
+										</p>
+										<p>
+										  <label>Message: <textarea name="message"></textarea></label>
+										</p>
+										<p>
+										  <button type="submit">Send</button>
+										</p>
+									  </form>
 								</section>
 								<section>
 									<ul class="contact">
