--- a/index.html
+++ b/index.html
@@ -153,31 +153,11 @@
 										<ul class="actions">
 											<li><a href="" id="sendMessageBtn" class="button submit">üzenet küldése</a></li>
 										</ul>
-									<!-- 	<div class="col-6 col-12-small">
+									<div class="col-6 col-12-small">
 											<input type="checkbox" id="privacyPolicy" name="adatkezelesi">
 											<label for="privacyPolicy">Elovastam és elfogadom az <a href="./adatkezelesi.html">adatkezelési tájékoztatóban</a>  foglaltakat</label>
-										</div> -->
+										</div> 
 									</form>
-									<form name="other" method="POST" data-netlify="true">
-										<p>
-										  <label>Your Name: <input type="text" name="name" /></label>
-										</p>
-										<p>
-										  <label>Your Email: <input type="email" name="email" /></label>
-										</p>
-										<p>
-										  <label>Your Role: <select name="role[]" multiple>
-											<option value="leader">Leader</option>
-											<option value="follower">Follower</option>
-										  </select></label>
-										</p>
-										<p>
-										  <label>Message: <textarea name="message"></textarea></label>
-										</p>
-										<p>
-										  <button type="submit">Send</button>
-										</p>
-									  </form>
 								</section>
 								<section>
 									<ul class="contact">
