--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 							<p>Kollégáink várják megkeresését</p>
 							<div class="split style1">
 								<section>
-									<form name="contact" method="POST"  data-netlify="true">
+									<form name="contact2" method="POST"  data-netlify="true">
 										<div class="fields">
 											<div class="field half">
 												<label for="name">Név</label>
@@ -153,9 +153,9 @@
 										<ul class="actions">
 											<li><a href="" id="sendMessageBtn" class="button submit">üzenet küldése</a></li>
 										</ul>
-									<div class="col-6 col-12-small">
-											<input type="checkbox" id="privacyPolicy" name="adatkezelesi">
-											<label for="privacyPolicy">Elovastam és elfogadom az <a href="./adatkezelesi.html">adatkezelési tájékoztatóban</a>  foglaltakat</label>
+										<div class="col-6 col-12-small">
+												<input type="checkbox" id="privacyPolicy" name="privacyPolicy">
+												<label for="privacyPolicy">Elovastam és elfogadom az <a href="./adatkezelesi.html">adatkezelési tájékoztatóban</a>  foglaltakat</label>
 										</div> 
 									</form>
 								</section>
