--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 							<p>Kollégáink várják megkeresését</p>
 							<div class="split style1">
 								<section>
-									<form name="contact2" method="POST"  data-netlify="true">
+									<form name="contact2" method="POST" action="./success.html" data-netlify="true">
 										<div class="fields">
 											<div class="field half">
 												<label for="name">Név</label>
