--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 							<p>Kollégáink várják megkeresését</p>
 							<div class="split style1">
 								<section>
-									<form name="contact2" method="POST" action="./success.html" data-netlify="true">
+									<form name="contact2" id="contactForm" method="POST" action="./success.html" data-netlify="true">
 										<div class="fields">
 											<div class="field half">
 												<label for="name">Név</label>
@@ -155,7 +155,7 @@
 										</ul>
 										<div class="col-6 col-12-small">
 												<input type="checkbox" id="privacyPolicy" name="privacyPolicy">
-												<label for="privacyPolicy">Elovastam és elfogadom az <a href="./adatkezelesi.html">adatkezelési tájékoztatóban</a>  foglaltakat</label>
+												<label for="privacyPolicy" id="privacyPolicyText">Elovastam és elfogadom az <a href="./adatkezelesi.html">adatkezelési tájékoztatóban</a>  foglaltakat</label>
 										</div> 
 									</form>
 								</section>
