--- a/internationaltransfer.html
+++ b/internationaltransfer.html
@@ -26,19 +26,19 @@
 			<div id="wrapper">
 
 				<!-- Main -->
-					<section id="main" class="wrapper">
+					<section id="main" class="wrapper style1 fade-up">
 						<div class="inner">
-							<h1 class="major">Nemzetközi személyszállítás</h1>
-							<span class="image fit"><img src="images/sprinter3.png" alt="" /></span>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+							<section >
+								<h1 class="major">Nemzetközi személyszállítás</h1>
+								<p><span class="image left"><img src="images/sprinter3.png" alt="" /></span>Cégünk vállalja kisebb nagyobb csoportok szállítását külön alkalmakkor legyen szó akár belföldi akár nemzetközi utazásról.</p>
+							</section>
 						</div>
 					</section>
 
 			</div>
 
 		<!-- Footer -->
-			<footer id="footer" class="wrapper alt">
+		<footer id="footer" class="wrapper alt" style="margin-top: 200px;">
 				<div class="inner">
 					<ul class="menu">
 						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
