add istock photos

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/sprinter4.png" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/darkerVanSmallCube.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Nemzetközi személyszállítás</h2>
@@ -53,7 +53,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/sprinter5.png" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/premiumVanSmall.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Belföldi személyszállítás</h2>
@@ -65,7 +65,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/moving.png" alt="" data-position="25% 25%" /></a>
+							<a href="#" class="image"><img src="images/delivery-man-with-clipboard.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Költöztetés</h2>
@@ -195,7 +195,8 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Goldkert Transfer. Minden jog fenntartva.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Goldkert Transfer. Minden jog fenntartva.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>,
+						<a href="https://www.freepik.com/photos/courier-service">Courier service photo created by freepik - www.freepik.com</a>
 					</ul>
 				</div>
 			</footer>
