--- a/moving.html
+++ b/moving.html
@@ -30,7 +30,7 @@
 						<div class="inner">
 							<section >
 								<h1 class="major">Költöztetés</h1>
-								<p><span class="image left"><img src="images/moving.png" alt="" /></span>A nagy érdeklődésre való tekintettel elkezdtük legújabb tevékenységünket a Nemzetközi Csomagszállítást is. Hasonlóan precízen mint ahogy azt már megszokhatták. Volt már rá példa, hogy szállítottunk csomagokat de direkt külön még nem foglalkoztunk vele. A megnövekedett igények miatt viszont úgy láttuk, hogy itt az ideje.</p>
+								<p><span class="image left"><img src="images//delivery-man-with-clipboard.jpg" alt="" /></span>A nagy érdeklődésre való tekintettel elkezdtük legújabb tevékenységünket a Nemzetközi Csomagszállítást is. Hasonlóan precízen mint ahogy azt már megszokhatták. Volt már rá példa, hogy szállítottunk csomagokat de direkt külön még nem foglalkoztunk vele. A megnövekedett igények miatt viszont úgy láttuk, hogy itt az ideje.</p>
 							</section>
 						</div>
 					</section>
@@ -41,7 +41,8 @@
 		<footer id="footer" class="wrapper alt" style="margin-top: 200px;">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>,
+						<a href="https://www.freepik.com/photos/courier-service">Courier service photo created by freepik - www.freepik.com</a>
 					</ul>
 				</div>
 			</footer>
