--- a/internationaltransfer.html
+++ b/internationaltransfer.html
@@ -30,7 +30,7 @@
 						<div class="inner">
 							<section >
 								<h1 class="major">Nemzetközi személyszállítás</h1>
-								<p><span class="image left"><img src="images//darkerVanSmall.jpg" alt="" /></span>Cégünk vállalja kisebb nagyobb csoportok szállítását külön alkalmakkor legyen szó akár belföldi akár nemzetközi utazásról.</p>
+								<p><span class="image left"><img src="images/darkerVanExtraSmallCube.jpg" alt="" /></span>Cégünk vállalja kisebb nagyobb csoportok szállítását külön alkalmakkor legyen szó akár belföldi akár nemzetközi utazásról.</p>
 							</section>
 						</div>
 					</section>
@@ -38,7 +38,7 @@
 			</div>
 
 		<!-- Footer -->
-		<footer id="footer" class="wrapper alt" style="margin-top: 200px;">
+		<footer id="footer" class="wrapper alt" style="margin-top: 300px;">
 				<div class="inner">
 					<ul class="menu">
 						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
