converted webp images added

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/darkerVanExtraSmallCube.jpg" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/darkerVanExtraSmallCube.webp" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Nemzetközi személyszállítás</h2>
@@ -53,7 +53,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/premimVanExtraSmall.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/premimVanExtraSmall.webp" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Belföldi személyszállítás</h2>
@@ -65,7 +65,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/delivery-man-small.jpg" alt="" data-position="25% 25%" /></a>
+							<a href="#" class="image"><img src="images/delivery-man-small.webp" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Költöztetés</h2>
