--- a/moving.html
+++ b/moving.html
@@ -30,7 +30,7 @@
 						<div class="inner">
 							<section >
 								<h1 class="major">Költöztetés</h1>
-								<p><span class="image left"><img src="images/delivery-man-small.jpg" alt="" /></span>A nagy érdeklődésre való tekintettel elkezdtük legújabb tevékenységünket a Nemzetközi Csomagszállítást is. Hasonlóan precízen mint ahogy azt már megszokhatták. Volt már rá példa, hogy szállítottunk csomagokat de direkt külön még nem foglalkoztunk vele. A megnövekedett igények miatt viszont úgy láttuk, hogy itt az ideje.</p>
+								<p><span class="image left"><img src="images/delivery-man-small.webp" alt="" /></span>A nagy érdeklődésre való tekintettel elkezdtük legújabb tevékenységünket a Nemzetközi Csomagszállítást is. Hasonlóan precízen mint ahogy azt már megszokhatták. Volt már rá példa, hogy szállítottunk csomagokat de direkt külön még nem foglalkoztunk vele. A megnövekedett igények miatt viszont úgy láttuk, hogy itt az ideje.</p>
 							</section>
 						</div>
 					</section>
