--- a/transfer.html
+++ b/transfer.html
@@ -31,7 +31,7 @@
 						<div class="inner">
 							<section >
 								<h1 class="major">Belföldi személyszállítás</h1>
-								<p><span class="image left"><img src="images/premimVanExtraSmall.jpg" alt="" /></span>Cégünk vállalja kisebb nagyobb csoportok szállítását külön alkalmakkor legyen szó akár belföldi akár nemzetközi utazásról.</p>
+								<p><span class="image left"><img src="images/premimVanExtraSmall.webp" alt="" /></span>Cégünk vállalja kisebb nagyobb csoportok szállítását külön alkalmakkor legyen szó akár belföldi akár nemzetközi utazásról.</p>
 							</section>
 						</div>
 					</section>
