--- a/internationaltransfer.html
+++ b/internationaltransfer.html
@@ -30,7 +30,7 @@
 						<div class="inner">
 							<section >
 								<h1 class="major">Nemzetközi személyszállítás</h1>
-								<p><span class="image left"><img src="images/darkerVanExtraSmallCube.jpg" alt="" /></span>Cégünk vállalja kisebb nagyobb csoportok szállítását külön alkalmakkor legyen szó akár belföldi akár nemzetközi utazásról.</p>
+								<p><span class="image left"><img src="images/darkerVanExtraSmallCube.webp" alt="" /></span>Cégünk vállalja kisebb nagyobb csoportok szállítását külön alkalmakkor legyen szó akár belföldi akár nemzetközi utazásról.</p>
 							</section>
 						</div>
 					</section>
