--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="icon" href="./images/favicon-16x16.png">
+		<link rel="icon" type="image/png" href="./images/favicon-16x16.png">
+		<link rel="shortcut icon"   href="./images/favicon.ico"/>	
+		<link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon-180x180.png">
 		<meta property="og:title" content="Utazzon velünk!">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
